fix overflow on main container

--- a/styles/main.module.css
+++ b/styles/main.module.css
@@ -8,6 +8,7 @@
 
 @media screen and (max-width: 520px) {
     .mainContainer {
+        overflow-x: hidden;
         max-width: none;
         min-height: none;
         padding: 0;
